Fix clipped layer title in smaller retina screen.

--- a/src/style/sections/layers/face.less
+++ b/src/style/sections/layers/face.less
@@ -76,7 +76,8 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow-x: hidden;
-    padding: 0.2rem 0;
+    height: 2rem;
+    padding: 0.4rem 0;
 }
 
 input[type="text"].face__name {
